Bug 997593 - Handle error from OMXCodecWrapper in OmxVideoTrackEncoder::GetEncodedTrack(). r=roc